--- a/TODO
+++ b/TODO
@@ -9,4 +9,7 @@ Norbi:
     - Adatbázis trigger USER nevének formázására
 
 Martin:
-    - x
+    - Melegnek lenni
+	- Megtesszük, amit meg kell tennünk
+	- LMFAO, LMAO, KEKW, OMEGALUL, YOLO jelentéseinek meghatározása
+	- Ki az, kenyeret süt, de nem a pék?
